--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ nav {
   color: var(--hospital-green);
 }
 .navbar-email {
+  cursor: pointer;
   color: var(--very-light-pink);
   font-size: var(--sm);
   margin-right: 12px;
