fix aside padding

--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ nav {
 /* Aside Shopping Cart */
 .product-detail {
   width: 360px;
-  padding: 24px;
+  padding: 0 24px;
   box-sizing: border-box;
   position: absolute;
   right: 0;
