--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,7 @@ nav {
 /* Mobile Menu styles*/
 
 .mobile-menu {
+  background-color: var(--white);
   position: absolute;
   top: 60px;
   padding: 24px;
@@ -159,6 +160,7 @@ nav {
 
 /* Aside Shopping Cart */
 .product-detail {
+  background-color: var(--white);
   width: 360px;
   padding: 0 24px;
   box-sizing: border-box;
