add margin top to items

--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,7 @@ nav {
 
 /* Product List Styles */
 .cards-container {
+  margin-top: 24px;
   display: grid;
   grid-template-columns: repeat(auto-fill, 240px);
   gap: 26px;
