fix class name conflict

--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ nav {
 }
 
 /* Aside Shopping Cart */
-.product-detail {
+.shopping-cartContainer {
   background-color: var(--white);
   width: 360px;
   padding: 0 24px;
@@ -291,7 +291,7 @@ nav {
   .desktop-menu {
     display: none;
   }
-  .product-detail {
+  .shopping-cartContainer {
     width: 100%;
   }
   .cards-container {
