fix padding conflict among aside elmnts

--- a/styles.css
+++ b/styles.css
@@ -162,13 +162,15 @@ nav {
 aside {
   background-color: var(--white);
   width: 360px;
-  padding: 0 24px;
   box-sizing: border-box;
   position: absolute;
   right: 0;
 }
 
 /* Shopping Cart */
+.shopping-cartContainer {
+  padding: 0 24px;
+}
 .title-container {
   display: flex;
 }
