--- a/styles.css
+++ b/styles.css
@@ -367,6 +367,9 @@ aside {
     width: 140px;
     height: 140px;
   }
+  .product-detail {
+    width: 100%;
+  }
 }
 
 @media (min-width: 641px) {
