--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,8 @@ nav {
   position: absolute;
   top: 60px;
   padding: 24px;
+  left: 0;
+  width: 100%;
 }
 .mobile-menu a {
   text-decoration: none;
